updated stream overlay (fixed cropped text)

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -306,7 +306,7 @@ button {
 
 .candidate-answer-huge {
     font-weight: bold;
-    font-size: 32px;
+    font-size: 30px;
     color: #10687A;
 }
 
